GNOME Bugzilla – Bug 720897
alt+left doesn't go back
Last modified: 2014-01-03 19:32:47 UTC
In most browsers alt+left goes back. I think it would be nice if we did that too.
Created attachment 264797 [details] [review] Make alt + left/right navigate back/forward
Review of attachment 264797 [details] [review]: Great! I wonder why we have KP_Right and KP_Left but not Right/Left :-P ::: src/ephy-window.c @@ +293,3 @@ * They're KP_PageUp/Down again! */ + { GDK_KEY_Left, GDK_MOD1_MASK /*Alt*/, "NavigationBack", TRUE }, Please, keep the alignment like all other entries.
Attachment 264797 [details] pushed as 0f33d56 - Make alt + left/right navigate back/forward