Make alt + left/right navigate back/forward

https://bugzilla.gnome.org/show_bug.cgi?id=720897